# greenWTE

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.rst  paper.bib  paper.md  pyproject.toml
.github/workflows/: ci.yml  joss-draft-pdf.yml  release.yml
doc/: api.rst  cli-arguments.rst  conf.py  index.rst  installation.rst  tutorials.rst
greenWTE/: __init__.py  base.py  green.py  io.py  iterative.py  lib.py  nvtx_utils.py  post.py  precompute_green.py  solve.py  solve_green.py  solve_iter.py  solver.py  sources.py
greenWTE/tests/: __init__.py  test_base_classes.py  test_cli.py  test_green.py  test_io.py  test_physics.py  test_sources.py
test/: __init__.py  base_classes.py  cli.py  defaults.py  green.py  physics.py  test_base_classes.py  test_cli.py  test_green.py  test_io.py  test_physics.py  test_sources.py  tests.py
