[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "greenWTE"
description = "Solve the Wigner Transport Equation with a source term!"
authors = [{ name = "Laurenz Kremeyer", email = "laurenz.kremeyer@mail.mcgill.ca" }]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
dynamic = ["version"]
dependencies = [
  "numpy~=1.26",  # Numpy 2 is not yet supported with Cupy and CUDA
  "scipy~=1.11",
  "h5py",
  "bitshuffle",
]

[project.optional-dependencies]
cuda12x = ["cupy-cuda12x>=12.0"]
cuda13x = ["cupy-cuda13x>=13.0"]

[tool.hatch]
version.path = "greenWTE/__init__.py"

[tool.hatch.envs.hatch-test]
features = ["cuda12x"]
default-args = ["test"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.docs]
dependencies = ["sphinx", "sphinx-rtd-theme", "cupy-cuda12x>=12.0"]

[tool.hatch.envs.docs.scripts]
build = "cd doc && make clean && make html"
serve = "python -m http.server -d doc/_build/html"

[tool.ruff]
line-length = 120
src = ["greenWTE"]

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "E", # pycodestyle-errors
    "D", # pydocstyle
]
ignore = [
    "D203", # numpy doc style
    "D213", # numpy doc style
    "B023", # function-uses-loop-variable
    "B008", # function-call-in-default-argument
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["greenWTE/tests"]
addopts = "--cov=greenWTE --cov-report=term-missing"
filterwarnings = [
  # Ignore NumPy lstsq rcond deprecation emitted inside cupyx.scipy.sparse.linalg.gmres
  "ignore:`rcond` parameter will change:FutureWarning:cupyx\\.scipy\\.sparse\\.linalg\\._iterative",
  # Ignoe NumPy product deprecation emitted inside h5py
  "ignore: `product` is deprecated as of NumPy 1.25.0, and will be removed in NumPy 2.0. Please use `prod` instead.",
]

[tool.coverage.run]
branch = true
source = ["greenWTE"]
omit = ["greenWTE/post.py"]

[tool.coverage.report]
show_missing = true
exclude_also = [
  "def __repr__",
]
